Fix: add message and stacktrace for unexpected error

--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -1487,6 +1487,7 @@ angal.sms.sms                                                                   
 angal.sms.telephone                                                              = Telefon
 angal.sms.themessageislongerthen                                                 = The message is longer then
 angal.sms.title                                                                  = SMS Manager
+angal.sql.anunexpectederroroccurredpleasecheckthelogs                            = Ein unerwarteter Fehler ist aufgetreten. Bitte überprüfen Sie die Protokolle
 angal.sql.constraintviolation                                                    = Constraint Violation
 angal.sql.couldntfindthedataithasprobablybeendeleted                             = Datum nicht gefunden. Es wurde wahrscheinlich gelöscht.
 angal.sql.operationnotpermittedprotectedelement                                  = Operation not permitted. Protected element.
