--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -1576,6 +1576,7 @@ angal.sms.sms                                                                   
 angal.sms.telephone                                                              = Telephone
 angal.sms.themessageislongerthen                                                 = The message is longer then
 angal.sms.title                                                                  = SMS Manager
+angal.sql.anunexpectederroroccurredpleasecheckthelogs                            = An unexpected error occurred please check the logs
 angal.sql.constraintviolation                                                    = Constraint Violation
 angal.sql.couldntfindthedataithasprobablybeendeleted                             = Couldn't find the data, it has probably been deleted.
 angal.sql.operationnotpermittedprotectedelement                                  = Operation not permitted, protected element.
