--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -1488,6 +1488,7 @@ angal.sms.sms                                                                   
 angal.sms.telephone                                                              = Teléfono
 angal.sms.themessageislongerthen                                                 = El mensaje es demasiado extenso
 angal.sms.title                                                                  = Gestor de SMS
+angal.sql.anunexpectederroroccurredpleasecheckthelogs                            = Ocurrió un error inesperado, verifique los registros
 angal.sql.constraintviolation                                                    = Violación de restricción
 angal.sql.couldntfindthedataithasprobablybeendeleted                             = Imposible hallar el dato, probablemente ha sido eliminado.
 angal.sql.operationnotpermittedprotectedelement                                  = Operación no permitida. Elemento protegido.
