--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -1516,6 +1516,7 @@ angal.sms.sms                                                                   
 angal.sms.telephone                                                              = Téléphone
 angal.sms.themessageislongerthen                                                 = Le message est plus long que
 angal.sms.title                                                                  = Gestionnaire de SMS
+angal.sql.anunexpectederroroccurredpleasecheckthelogs                            = Une erreur inattendue s'est produite, veuillez vérifier les journaux
 angal.sql.constraintviolation                                                    = Constraint Violation
 angal.sql.couldntfindthedataithasprobablybeendeleted                             = Il est impossible de trouver la données. Elle a été probablement effacée.
 angal.sql.operationnotpermittedprotectedelement                                  = Operation not permitted. Protected element.
