--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -1532,6 +1532,7 @@ angal.sms.sms                                                                   
 angal.sms.telephone                                                              = Telefono
 angal.sms.themessageislongerthen                                                 = Il messaggio è più lungo di
 angal.sms.title                                                                  = SMS Manager
+angal.sql.anunexpectederroroccurredpleasecheckthelogs                            = Si è verificato un errore imprevisto, controllare i log
 angal.sql.constraintviolation                                                    = Violazione di vincoli
 angal.sql.couldntfindthedataithasprobablybeendeleted                             = Impossibile trovare il dato. È stato probabilmente cancellato.
 angal.sql.operationnotpermittedprotectedelement                                  = Operazione non permessa. Elemento protetto.
