--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -1485,6 +1485,7 @@ angal.sms.sms                                                                   
 angal.sms.telephone                                                              = Telefone
 angal.sms.themessageislongerthen                                                 = A mensagem é mais longa em seguida
 angal.sms.title                                                                  = Gerente de SMS
+angal.sql.anunexpectederroroccurredpleasecheckthelogs                            = Ocorreu um erro inesperado, verifique os registros
 angal.sql.constraintviolation                                                    = Constraint Violation
 angal.sql.couldntfindthedataithasprobablybeendeleted                             = Não consegui encontrar os dados, provavelmente tiver sido excluído.
 angal.sql.operationnotpermittedprotectedelement                                  = Operação não permitida, protegido por elemento.
