Upgraded 6 reports (archived 1)
- PharmaceuticalAMC
- PharmaceuticalExpiration
- PharmaceuticalOrder
x PharmaceuticalStock
- PharmaceuticalStock_ver4
- PharmaceuticalStock_ver5
- PharmaceuticalStockWard

--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -606,6 +606,7 @@ angal.medicals.newmedicalrecord                                                 
 angal.medicals.nextmonth                                                         = Próximo mes
 angal.medicals.nextthreemonths                                                   = Próximos tres meses
 angal.medicals.nexttwomonths                                                     = Próximos dos meses
+angal.medicals.onlyquantity                                                      = Solo cantidad
 angal.medicals.orderlist                                                         = Orden
 angal.medicals.othermonth                                                        = Otro mes...
 angal.medicals.outofstockm                                                       = Fuera ALMACÉN
@@ -629,6 +630,7 @@ angal.medicals.thismonth                                                        
 angal.medicals.today                                                             = Hoy
 angal.medicals.type                                                              = Tipología
 angal.medicals.typem                                                             = TIPOLOGÍA
+angal.medicals.withlot                                                           = Con lotes
 angal.medicalstock.all                                                           = Todos
 angal.medicalstock.bottlesorboxes                                                = botella/caja
 angal.medicalstock.buttons                                                       = Botones
