--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -610,6 +610,7 @@ angal.medicals.newmedicalrecord                                                 
 angal.medicals.nextmonth                                                         = Le mois prochain
 angal.medicals.nextthreemonths                                                   = Suivant trois mois
 angal.medicals.nexttwomonths                                                     = Suivant deux mois
+angal.medicals.onlyquantity                                                      = Seulement quantité
 angal.medicals.orderlist                                                         = Ordonnez
 angal.medicals.othermonth                                                        = Autre mois...
 angal.medicals.outofstockm                                                       = HORS MAGASIN
@@ -633,6 +634,7 @@ angal.medicals.thismonth                                                        
 angal.medicals.today                                                             = aujourd'hui
 angal.medicals.type                                                              = Typologie
 angal.medicals.typem                                                             = TYPOLOGIE
+angal.medicals.withlot                                                           = Avec lots
 angal.medicalstock.all                                                           = Tous
 angal.medicalstock.bottlesorboxes                                                = bouteilles/boites
 angal.medicalstock.buttons                                                       = Boucles
