--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -621,6 +621,7 @@ angal.medicals.newmedicalrecord                                                 
 angal.medicals.nextmonth                                                         = Prossimo mese
 angal.medicals.nextthreemonths                                                   = Prossimi tre mesi
 angal.medicals.nexttwomonths                                                     = Prossimi due mesi
+angal.medicals.onlyquantity                                                      = Solo quantità
 angal.medicals.orderlist                                                         = Ordine
 angal.medicals.othermonth                                                        = Altro mese...
 angal.medicals.outofstockm                                                       = FUORI MAGAZZINO
@@ -644,6 +645,7 @@ angal.medicals.thismonth                                                        
 angal.medicals.today                                                             = Oggi
 angal.medicals.type                                                              = Tipologia
 angal.medicals.typem                                                             = TIPOLOGIA
+angal.medicals.withlot                                                           = Con lotti
 angal.medicalstock.all                                                           = Tutti
 angal.medicalstock.bottlesorboxes                                                = bottiglie/scatole
 angal.medicalstock.buttons                                                       = Bottoni
