--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -603,6 +603,7 @@ angal.medicals.newmedicalrecord                                                 
 angal.medicals.nextmonth                                                         = Próximo mês
 angal.medicals.nextthreemonths                                                   = Próximos três meses
 angal.medicals.nexttwomonths                                                     = Próximos dois meses
+angal.medicals.onlyquantity                                                      = Só quantidade
 angal.medicals.orderlist                                                         = Aquisição
 angal.medicals.othermonth                                                        = Outro mês...
 angal.medicals.outofstockm                                                       = INDISPONÍVEL
@@ -626,6 +627,7 @@ angal.medicals.thismonth                                                        
 angal.medicals.today                                                             = Hoje
 angal.medicals.type                                                              = Typo
 angal.medicals.typem                                                             = TIPO
+angal.medicals.withlot                                                           = Com lotes
 angal.medicalstock.all                                                           = Tudo
 angal.medicalstock.bottlesorboxes                                                = frascos/caixas
 angal.medicalstock.buttons                                                       = Butões
