--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -636,6 +636,7 @@ angal.medicals.newmedicalrecord                                                 
 angal.medicals.nextmonth                                                         = Next month
 angal.medicals.nextthreemonths                                                   = Next three months
 angal.medicals.nexttwomonths                                                     = Next two months
+angal.medicals.onlyquantity                                                      = Only quantity
 angal.medicals.orderlist                                                         = Order
 angal.medicals.othermonth                                                        = Other month...
 angal.medicals.outofstockm                                                       = OUT OF STOCK
@@ -659,6 +660,7 @@ angal.medicals.thismonth                                                        
 angal.medicals.today                                                             = Today
 angal.medicals.type                                                              = Type
 angal.medicals.typem                                                             = TYPE
+angal.medicals.withlot                                                           = With lots
 angal.medicalstock.all                                                           = All
 angal.medicalstock.bottlesorboxes                                                = bottles/boxes
 angal.medicalstock.buttons                                                       = Buttons
