Fixed two labels in Clinical Sheet report

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -268,7 +268,9 @@ angal.common.codealreadyinuse                                                   
 angal.common.codem                                                               = الرمز
 angal.common.codestar                                                            = الرمز *
 angal.common.date                                                                = التاريخ
+angal.common.datefrom                                                            = التاريخ من:
 angal.common.datem                                                               = التاريخ
+angal.common.dateto                                                              = تاريخ إلى:
 angal.common.delete                                                              = حذف
 angal.common.deletem                                                             = حذف
 angal.common.description                                                         = وصف
