--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -266,7 +266,9 @@ angal.common.codealreadyinuse                                                   
 angal.common.codem                                                               = CODE
 angal.common.codestar                                                            = Code *
 angal.common.date                                                                = Datum
+angal.common.datefrom                                                            = Seit:
 angal.common.datem                                                               = DATUM
+angal.common.dateto                                                              = Bis:
 angal.common.delete                                                              = Löschen
 angal.common.deletem                                                             = LÖSCHEN
 angal.common.description                                                         = Description
