--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -269,7 +269,9 @@ angal.common.codealreadyinuse                                                   
 angal.common.codem                                                               = CÓDIGO
 angal.common.codestar                                                            = Código *
 angal.common.date                                                                = Fecha
+angal.common.datefrom                                                            = De fecha:
 angal.common.datem                                                               = FECHA
+angal.common.dateto                                                              = A fecha:
 angal.common.delete                                                              = Eliminar
 angal.common.deletem                                                             = ELIMINAR
 angal.common.description                                                         = Descripción
