--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -271,7 +271,9 @@ angal.common.codealreadyinuse                                                   
 angal.common.codem                                                               = CODE
 angal.common.codestar                                                            = Code *
 angal.common.date                                                                = date
+angal.common.datefrom                                                            = De date:
 angal.common.datem                                                               = DATE
+angal.common.dateto                                                              = Au date:
 angal.common.delete                                                              = Eliminez
 angal.common.deletem                                                             = ELIMINEZ
 angal.common.description                                                         = Description
@@ -1139,7 +1141,7 @@ angal.opd.city                                                                  
 angal.opd.count                                                                  = Count
 angal.opd.datefrom                                                               = De date:
 angal.opd.datefrommustbebefordateto                                              = 'De date' doit être inférieur de 'é date'
-angal.opd.dateto                                                                 = é date:
+angal.opd.dateto                                                                 = Au date:
 angal.opd.deletefollowingopd                                                     = Eliminez le DDP suivant:
 angal.opd.diagnosis                                                              = diagnostic
 angal.opd.diagnosisnfulllist                                                     = diagnostic n.2 (liste compléte)
