--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -271,7 +271,9 @@ angal.common.codealreadyinuse                                                   
 angal.common.codem                                                               = CODICE
 angal.common.codestar                                                            = Codice *
 angal.common.date                                                                = Data
+angal.common.datefrom                                                            = Da data:
 angal.common.datem                                                               = DATA
+angal.common.dateto                                                              = A data:
 angal.common.delete                                                              = Elimina
 angal.common.deletem                                                             = ELIMINA
 angal.common.description                                                         = Descrizione
