--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -266,7 +266,9 @@ angal.common.codealreadyinuse                                                   
 angal.common.codem                                                               = CÓDIGO
 angal.common.codestar                                                            = Código *
 angal.common.date                                                                = Data
+angal.common.datefrom                                                            = Data de:
 angal.common.datem                                                               = DATA
+angal.common.dateto                                                              = Data de:
 angal.common.delete                                                              = Excluir
 angal.common.deletem                                                             = EXCLUIR
 angal.common.description                                                         = Descrição
