--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -266,7 +266,9 @@ angal.common.codealreadyinuse                                                   
 angal.common.codem                                                               = ISHARA
 angal.common.codestar                                                            = Ishara *
 angal.common.date                                                                = Tarehe
+angal.common.datefrom                                                            = Tarehe Kutoka:
 angal.common.datem                                                               = TAREHE
+angal.common.dateto                                                              = Tarehe Mpaka:
 angal.common.delete                                                              = Futa
 angal.common.deletem                                                             = FUTA
 angal.common.description                                                         = Maelezo
@@ -1130,9 +1132,9 @@ angal.opd.alltype                                                               
 angal.opd.attendancedate                                                         = Tarehe ya kuhudumiwa
 angal.opd.city                                                                   = Jiji
 angal.opd.count                                                                  = Hesabu
-angal.opd.datefrom                                                               = TAREHE Kutoka:
+angal.opd.datefrom                                                               = Tarehe Kutoka:
 angal.opd.datefrommustbebefordateto                                              = 'Tarehe Kutoka' lazima uwe chini ya 'Tarehe mpaka'
-angal.opd.dateto                                                                 = TAREHE Mpaka:
+angal.opd.dateto                                                                 = Tarehe Mpaka:
 angal.opd.deletefollowingopd                                                     = Futa opd hawa:
 angal.opd.diagnosis                                                              = Uaguzi
 angal.opd.diagnosisnfulllist                                                     = Uaguzi n.2 (orodha yote)
