--- a/bundle/language_zh_CN.properties
+++ b/bundle/language_zh_CN.properties
@@ -254,7 +254,9 @@ angal.common.codealreadyinuse                                                   
 angal.common.codem                                                               = CODE
 angal.common.codestar                                                            = Code *
 angal.common.date                                                                = Date
+angal.common.datefrom                                                            = Date From:
 angal.common.datem                                                               = DATE
+angal.common.dateto                                                              = Date To:
 angal.common.delete                                                              = Delete
 angal.common.deletem                                                             = DELETE
 angal.common.description                                                         = Description
@@ -1083,9 +1085,9 @@ angal.opd.alltype                                                               
 angal.opd.attendancedate                                                         = Attendance Date
 angal.opd.city                                                                   = City
 angal.opd.count                                                                  = Count
-angal.opd.datefrom                                                               = DATE From:
+angal.opd.datefrom                                                               = Date From:
 angal.opd.datefrommustbebefordateto                                              = 'Date from' must be lower than 'Date to'
-angal.opd.dateto                                                                 = DATE To:
+angal.opd.dateto                                                                 = Date To:
 angal.opd.deletefollowingopd                                                     = Delete following opd:
 angal.opd.diagnosis                                                              = Diagnosis
 angal.opd.diagnosisnfulllist                                                     = Diagnosis n.2 (full list)
