OP-153 Minor bugs fixes
- Fixed ChooseLot and NewLot when no drug is selected
- Set minimum quantity to zero in JSpinner
- Fixed lot selection when discharging from ward
- Always avoid lot selection when discharging to patients
- Fixed some translations

--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -776,7 +776,7 @@ angal.medicalstock.multipledischarging.referencenumber                          
 angal.medicalstock.multipledischarging.selectalot                                = Select a lot
 angal.medicalstock.multipledischarging.sharealertwithnobody                      = -- Share alert with: Nobody --
 angal.medicalstock.multipledischarging.theinsertedreferencenumberalreadyexists   = the inserted reference number already exists
-angal.medicalstock.multipledischarging.thequantityisnotavailable                 = the quantity is not available
+angal.medicalstock.multipledischarging.thequantityisnotavailable                 = The quantity is not available
 angal.medicalstock.multipledischarging.total                                     = TOTAL
 angal.medicalstock.multipledischarging.totalcost                                 = Total cost
 angal.medicalstock.multipledischarging.unitcost                                  = Unit cost
