--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -759,7 +759,7 @@ angal.medicalstock.multipledischarging.referencenumber                          
 angal.medicalstock.multipledischarging.selectalot                                = Selezionare un lotto
 angal.medicalstock.multipledischarging.sharealertwithnobody                      = -- Condividi evento con: Nessuno --
 angal.medicalstock.multipledischarging.theinsertedreferencenumberalreadyexists   = Il numero di bolla inserito esiste già
-angal.medicalstock.multipledischarging.thequantityisnotavailable                 = la quantità non è disponibile
+angal.medicalstock.multipledischarging.thequantityisnotavailable                 = La quantità non è disponibile
 angal.medicalstock.multipledischarging.total                                     = TOTALE
 angal.medicalstock.multipledischarging.totalcost                                 = Costo Totale
 angal.medicalstock.multipledischarging.unitcost                                  = Costo Unità
