--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -741,7 +741,7 @@ angal.medicalstock.multipledischarging.referencenumber                          
 angal.medicalstock.multipledischarging.selectalot                                = Selecione muito
 angal.medicalstock.multipledischarging.sharealertwithnobody                      = ..--Alerta compartilhar com: ninguém...
 angal.medicalstock.multipledischarging.theinsertedreferencenumberalreadyexists   = o número de referência inserido já existe
-angal.medicalstock.multipledischarging.thequantityisnotavailable                 = a quantidade não está disponível
+angal.medicalstock.multipledischarging.thequantityisnotavailable                 = A quantidade não está disponível
 angal.medicalstock.multipledischarging.total                                     = TOTAL
 angal.medicalstock.multipledischarging.totalcost                                 = Custo total
 angal.medicalstock.multipledischarging.unitcost                                  = Custo unitário
