--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -751,7 +751,7 @@ angal.medicalstock.multipledischarging.referencenumber                          
 angal.medicalstock.multipledischarging.selectalot                                = Select a lot
 angal.medicalstock.multipledischarging.sharealertwithnobody                      = -- Share alert with: Nobody --
 angal.medicalstock.multipledischarging.theinsertedreferencenumberalreadyexists   = the inserted reference number already exists
-angal.medicalstock.multipledischarging.thequantityisnotavailable                 = the quantity is not available
+angal.medicalstock.multipledischarging.thequantityisnotavailable                 = The quantity is not available
 angal.medicalstock.multipledischarging.total                                     = المجموع
 angal.medicalstock.multipledischarging.totalcost                                 = Total cost
 angal.medicalstock.multipledischarging.unitcost                                  = Unit cost
