--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -743,7 +743,7 @@ angal.medicalstock.multipledischarging.referencenumber                          
 angal.medicalstock.multipledischarging.selectalot                                = Select a lot
 angal.medicalstock.multipledischarging.sharealertwithnobody                      = -- Share alert with: Nobody --
 angal.medicalstock.multipledischarging.theinsertedreferencenumberalreadyexists   = the inserted reference number already exists
-angal.medicalstock.multipledischarging.thequantityisnotavailable                 = the quantity is not available
+angal.medicalstock.multipledischarging.thequantityisnotavailable                 = Die menge ist nicht verfügbar
 angal.medicalstock.multipledischarging.total                                     = TOTAL
 angal.medicalstock.multipledischarging.totalcost                                 = Total cost
 angal.medicalstock.multipledischarging.unitcost                                  = Unit cost
