--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -741,7 +741,7 @@ angal.medicalstock.multipledischarging.referencenumber                          
 angal.medicalstock.multipledischarging.selectalot                                = Select a lot
 angal.medicalstock.multipledischarging.sharealertwithnobody                      = -- Share alert with: Nobody --
 angal.medicalstock.multipledischarging.theinsertedreferencenumberalreadyexists   = the inserted reference number already exists
-angal.medicalstock.multipledischarging.thequantityisnotavailable                 = the quantity is not available
+angal.medicalstock.multipledischarging.thequantityisnotavailable                 = Wingi haupatikani
 angal.medicalstock.multipledischarging.total                                     = JUMLA
 angal.medicalstock.multipledischarging.totalcost                                 = Total cost
 angal.medicalstock.multipledischarging.unitcost                                  = Unit cost
