OP-152 Minor bugs fixes
- Allow printing labels in LABEXTENDED=no mode (patient null)
- Allow printing generic (empty) labels
- Change labels report to rely on Laboratory rather than patient
- Fixed some labels and translations

--- a/bundle/language_de.properties
+++ b/bundle/language_de.properties
@@ -513,6 +513,7 @@ angal.lab.n                                                                     
 angal.lab.name                                                                   = Name
 angal.lab.negative                                                               = Negativ
 angal.lab.newlaboratoryexam                                                      = Neue Laboruntersuchung
+angal.lab.nopatientselectedprintempylabel                                        = Kein Patient ausgewählt, generische Etiketten drucken?
 angal.lab.note                                                                   = Hinweis
 angal.lab.notreactive                                                            = Nicht reaktiv
 angal.lab.openwithjasperReport                                                   = Mit JasperReport öffnen
