--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -543,6 +543,7 @@ angal.lab.n                                                                     
 angal.lab.name                                                                   = Name
 angal.lab.negative                                                               = Negative
 angal.lab.newlaboratoryexam                                                      = New laboratory exam 
+angal.lab.nopatientselectedprintempylabel                                        = No patient selected, print generic labels?
 angal.lab.note                                                                   = Note
 angal.lab.notreactive                                                            = Not reactive
 angal.lab.openwithjasperReport                                                   = Open with Jasper report
