--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -514,6 +514,7 @@ angal.lab.n                                                                     
 angal.lab.name                                                                   = Nombre
 angal.lab.negative                                                               = Negativo
 angal.lab.newlaboratoryexam                                                      = Nuevo examen de laboratorio
+angal.lab.nopatientselectedprintempylabel                                        = Ningún paciente seleccionado, ¿imprimir etiquetas genéricas?
 angal.lab.note                                                                   = Notas
 angal.lab.notreactive                                                            = No reactivo
 angal.lab.openwithjasperReport                                                   = Abrir con Jasper informe
