--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -518,6 +518,7 @@ angal.lab.n                                                                     
 angal.lab.name                                                                   = Nom
 angal.lab.negative                                                               = Négatif
 angal.lab.newlaboratoryexam                                                      = Nouvel examen de laboratoire
+angal.lab.nopatientselectedprintempylabel                                        = Aucun patient sélectionné, imprimer des étiquettes génériques?
 angal.lab.note                                                                   = Remarques
 angal.lab.notreactive                                                            = Pas réactif
 angal.lab.openwithjasperReport                                                   = Ouvrez avec Jasper report
