--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -529,6 +529,7 @@ angal.lab.n                                                                     
 angal.lab.name                                                                   = Nome
 angal.lab.negative                                                               = Negativo
 angal.lab.newlaboratoryexam                                                      = Nuovo esame di laboratorio
+angal.lab.nopatientselectedprintempylabel                                        = Nessun paziente selezionato, stampare etichette generiche?
 angal.lab.note                                                                   = Note
 angal.lab.notreactive                                                            = Non reattivo
 angal.lab.openwithjasperReport                                                   = Apri con Jasper report
