--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -511,6 +511,7 @@ angal.lab.n                                                                     
 angal.lab.name                                                                   = Nome
 angal.lab.negative                                                               = Negativo
 angal.lab.newlaboratoryexam                                                      = Novo exame de laboratório
+angal.lab.nopatientselectedprintempylabel                                        = Nenhum paciente selecionado, imprimir etiquetas genéricas?
 angal.lab.note                                                                   = Nota
 angal.lab.notreactive                                                            = Não reactivo
 angal.lab.openwithjasperReport                                                   = Abrir com relatório Jasper
