--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -511,6 +511,7 @@ angal.lab.n                                                                     
 angal.lab.name                                                                   = Jina
 angal.lab.negative                                                               = Sio sahihi
 angal.lab.newlaboratoryexam                                                      = Uchunguzi mpya wa maabara
+angal.lab.nopatientselectedprintempylabel                                        = Hakuna mgonjwa aliyechaguliwa, chapisha lebo za generic?
 angal.lab.note                                                                   = Ukumbusho
 angal.lab.notreactive                                                            = Haionyeshi hisia
 angal.lab.openwithjasperReport                                                   = Fungua na repoti ya jasper
